--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
          </hgroup>
          <hgroup id="category-title">
-            <h2>Projects:</h2>
+            <h2>Projects: test</h2>
          </hgroup>
       </div>
       <div id="map"></div>
